[package]
name = "alertmanager-uptime-kuma-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
reqwest = { version = "0.11.18" }
tokio = { version = "1.28", features = ["full"] }
url = { version = "2.3.1" }
