[workspace]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.68.2"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
opt-level = 's'
strip = true
lto = "thin"

[package]
name = "alertmanager-uptime-kuma-proxy"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
reqwest = { version = "0.11.18", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.29", features = ["full"] }
url = { version = "2.4.0" }
